--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Dec 01 08:16:20 COT 2021
-sdk.dir=C\:\\Users\\DAHELAP\\AppData\\Local\\Android\\Sdk
+#Wed Jan 12 17:40:28 COT 2022
+sdk.dir=C\:\\Users\\dahedev\\AppData\\Local\\Android\\Sdk
