--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Sep 20 17:47:36 COT 2022
-sdk.dir=C\:\\Users\\dahelap\\AppData\\Local\\Android\\Sdk
+#Tue Apr 11 17:22:30 COT 2023
+sdk.dir=C\:\\Users\\DAHEPC\\AppData\\Local\\Android\\Sdk
