--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Dec 24 17:20:49 PET 2025
-sdk.dir=C\:\\Users\\DAHELAP\\AppData\\Local\\Android\\Sdk
+#Thu Jan 15 22:21:21 PET 2026
+sdk.dir=C\:\\Users\\Desktop\\AppData\\Local\\Android\\Sdk
